--- a/Modules/02_Intro_Bayes/03_priors.Rmd
+++ b/Modules/02_Intro_Bayes/03_priors.Rmd
@@ -218,11 +218,13 @@ Conjugate distributions are useful because we can estimate the posterior distrib
 
 $$beta(2 + 1, 8 + 1) = beta(3, 9)$$
 
-```{r warning = F}
+```{r warning=FALSE}
 par(mfrow = c(1,3))
-for(i in c(1,2,5)){
-  a <- i
-  b <- 1
+aa <- c(1,2,5)
+bb <- c(1,5,2)
+for(i in 1:length(aa)){
+  a <- aa[i]
+  b <- bb[i]
   N <- 10
   successes <- 2
   failures <- N - successes
